--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ h1, h2, h3, h4,
 }
 
 .navbar-default .navbar-brand img{
-    width: 180px;
+    width: 150px;
 }
 
 .navbar-default .navbar-brand:hover, 
@@ -946,7 +946,20 @@ h1, h2, h3, h4,
     font-weight: 400;
     color: #999;
 }
-
+.card-border {
+    border: 1px solid #c6ccc7;
+}
+.card-style {
+    color: #000;
+    padding: 20px 13px;
+}
+.card-style h3{
+    font-weight: 600;
+}
+.card-style p {
+    font-size: 15px;
+    color: #6a6666;
+}
 /*End Portfolio Section*/
 
 
@@ -1148,7 +1161,9 @@ h1, h2, h3, h4,
 .blog .content p {
     font-size: 15px;
 }
+.card-border {
 
+}
 /*End Blog Section*/
 
 
