--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -946,19 +946,9 @@ h1, h2, h3, h4,
     font-weight: 400;
     color: #999;
 }
-.card-border {
-    border: 1px solid #c6ccc7;
-}
-.card-style {
-    color: #000;
-    padding: 20px 13px;
-}
-.card-style h3{
-    font-weight: 600;
-}
-.card-style p {
-    font-size: 15px;
-    color: #6a6666;
+.portfolio h6{
+    margin-bottom: 10px;
+    color: #FFB305;
 }
 /*End Portfolio Section*/
 
