--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -950,6 +950,25 @@ h1, h2, h3, h4,
     margin-bottom: 10px;
     color: #FFB305;
 }
+.portfolio_btn {
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 13px;
+    line-height: 1;
+    font-weight: 400;
+    padding: 18px 20px;
+    border: 2px solid #222;
+    color: #000;
+    min-width: 154px;
+    margin-top: 20px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+.contain 
+{
+    padding-right: 70px;
+}
 /*End Portfolio Section*/
 
 
@@ -961,7 +980,6 @@ h1, h2, h3, h4,
 .services .content {
     position: relative;
     z-index: 55;
-    text-align: center;
     padding: 45px 25px;
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);
     background-color: #fff;
@@ -976,13 +994,16 @@ h1, h2, h3, h4,
 }
 
 .services .icon {
-    display: inline-block;
+    /* display: inline-block; */
     position: relative;
+    text-align: center;
     z-index: -2;
-    width: 82px;
-    height: 82px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     background-color: #FFB305;
+    float: left;
+    margin-right: 20px;
 }
 .services .block-icon {
     background-color: #507ec8;
@@ -991,9 +1012,9 @@ h1, h2, h3, h4,
     background-color: #d35ca5;
 }
 .services i {
-    font-size: 30px;
+    font-size: 25px;
     color: white;
-    line-height: 82px;
+    line-height: 60px;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
@@ -1049,11 +1070,51 @@ h1, h2, h3, h4,
 }
 
 .services h3 {
-    font-size: 24px;
+    font-size: 25px;
     font-weight: 600;
     color: #111;
-    margin-top: 25px;
     margin-bottom: 15px;
+}
+.heading {
+    width: 100%; 
+    position: relative; 
+}
+.heading-title {
+    color: black;
+    line-height: 1.4em;
+    font-weight: 400;
+    padding-left: 35px;
+}
+.heading-container .heading-title::before {
+    content: "<h3>";
+    margin-bottom: 5px;
+    opacity: 0.3;
+    color: black;
+    display: block;
+    margin-left: -35px;
+    font-weight: normal;
+    font-size: 14px;
+}
+.heading-container .heading-title::after {
+    content: "<h3>";
+    margin-bottom: 5px;
+    opacity: 0.3;
+    color: black;
+    display: block;
+    margin-left: -35px;
+    font-weight: normal;
+    font-size: 14px;
+}
+.heading-container::after {
+    opacity: 0.3;
+    content: '';
+    width: 0;
+    height: 65%;
+    position: absolute;
+    background-color: black;
+    border: 0.1px solid black;
+    bottom: 17%;
+    left: 17px;
 }
 /* .dev_underline::after{
     transition: all 0.1s ease-in-out;
