--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,6 @@ h1, h2, h3, h4, h5, h6 {
     display: table-cell;
     vertical-align: middle;
 }
-
 .padding-top-90 {
     padding-top: 90px;
 }
@@ -397,7 +396,7 @@ h1, h2, h3, h4,
     background-color: rgba(40, 27, 27, 0.45);
 }
 
-.home h1 {
+/* .home h1 {
     color: #fff;
     font-size: 90px;
     text-align: center;
@@ -405,8 +404,11 @@ h1, h2, h3, h4,
     font-weight: 700;
     margin-top: 20px;
     margin-bottom: 20px;
+} */
+#demo-svg path{
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 0;
 }
-
 .home h3 {
     color: #fafafa;
     text-align: center;
