--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,7 @@ h1, h2, h3, h4, h5, h6 {
     display: table-cell;
     vertical-align: middle;
 }
+
 .padding-top-90 {
     padding-top: 90px;
 }
@@ -396,7 +397,7 @@ h1, h2, h3, h4,
     background-color: rgba(40, 27, 27, 0.45);
 }
 
-/* .home h1 {
+.home h1 {
     color: #fff;
     font-size: 90px;
     text-align: center;
@@ -404,11 +405,8 @@ h1, h2, h3, h4,
     font-weight: 700;
     margin-top: 20px;
     margin-bottom: 20px;
-} */
-#demo-svg path{
-    stroke-dasharray: 1000;
-    stroke-dashoffset: 0;
 }
+
 .home h3 {
     color: #fafafa;
     text-align: center;
@@ -980,6 +978,10 @@ h1, h2, h3, h4,
     margin-top: 20px;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+}
+.portfolio_btn:hover {
+    color: white;
+    background-color: black;
 }
 .contain 
 {
