--- a/assets/css/bg_fixed.css
+++ b/assets/css/bg_fixed.css
@@ -27,7 +27,7 @@ Template Name: Soliman - Creative Portfolio Template
 
 body {
     color: #ccc;
-    font-family: 'Manrope', sans-serif !important;
+    /* font-family: 'Manrope', sans-serif !important; */
 }
 
 .main_background {
