--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -7,6 +7,9 @@
 {
 
     /*-- home --*/
+    .container{
+        overflow-x: hidden !important;
+    }
     .navbar-default {
         padding-top: 10px;
     }
@@ -45,21 +48,65 @@
     .navbar-default .navbar-nav a:after {
         display: none;
     }
-
+    .header-h3{
+        display: none;
+    }
+    .btn-display {
+        display: none;
+    }
+    .home h3 span {
+        font-size: 20px;
+    }
+    .home h1 {
+        margin-bottom: 15px;
+    }
+    .home .social i {
+        font-size: 16px;
+    }
+    .list-img img {
+        width: 23px !important;
+    }
     /*-- about --*/
     .about .my__img {
-        margin-bottom: 30px
+        display: none;
     }
-
+    .about h3 {
+        font-size: 25px;
+    }
+    .about-sub::after{
+        display: none;
+    }
+    .about-header {
+        display: none;
+    }
+    .about-header-fix{
+        display: inline !important; 
+    }
+    .about {
+        margin-top: 20px !important;
+        padding: 10px;
+    }
+    .about p {
+        font-size: 16px;
+        margin-top: 10px;
+    }
     .about .padding-left-35 {
         padding-left: 15px;
     }
 
     /*-- services --*/
+    .services{
+        padding-top: 50px;
+    }
+    .sec_title {
+        padding-bottom: 40px;
+    }
     .services .item {
         margin-bottom: 30px;
     }
-
+    .portfolio_btn {
+        padding: 15px 15px;
+    }
     /*-- blog --*/
     .blog .item {
         margin-bottom: 40px;
