--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,9 +387,9 @@ h1, h2, h3, h4,
     transform-origin: 10% 90%;
 }
 .collapsed .icon-bar {
-    /* transform: none !important;
-    opacity: 1 !important; */
-    background-color: #F28705 !important;
+    transform: none !important;
+    opacity: 1 !important;
+    /* background-color: #F28705 !important; */
 }
 
 .home .display-table {
@@ -402,7 +402,7 @@ h1, h2, h3, h4,
     font-size: 90px;
     text-align: center;
     text-transform: capitalize;
-    font-weight: 700;
+    font-weight: 800;
     margin-top: 20px;
     margin-bottom: 20px;
 }
@@ -1526,3 +1526,4 @@ footer .social-links a i {
 }
 
 /*End Footer*/
+/* media queries */
