--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -44,7 +44,6 @@
         text-align: center;
         border-top: 1px solid rgba(153, 153, 153, 0.3);
     }
-
     .navbar-default .navbar-nav a:after {
         display: none;
     }
@@ -58,7 +57,7 @@
         font-size: 20px;
     }
     .home h1 {
-        margin-bottom: 15px;
+        font-size: 46px !important;
     }
     .home .social i {
         font-size: 16px;
