--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,11 +400,15 @@ h1, h2, h3, h4,
 .home h1 {
     color: #fff;
     font-size: 90px;
+    font-family: "Poppins",Sans-serif !important;
     text-align: center;
-    text-transform: capitalize;
-    font-weight: 800;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2.2px;
+    text-shadow: 1px 3px 11px rgb(0 0 0 / 30%) !important;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+
 }
 
 .home h3 {
