--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -55,9 +55,11 @@
     }
     .home h3 span {
         font-size: 20px;
+        line-height: 1.3em;
+        letter-spacing: 1.6px;
     }
     .home h1 {
-        font-size: 46px !important;
+        font-size: 43px !important;
     }
     .home .social i {
         font-size: 16px;
