--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,7 +408,6 @@ h1, h2, h3, h4,
     text-shadow: 1px 3px 11px rgb(0 0 0 / 30%) !important;
     margin-top: 20px;
     margin-bottom: 10px;
-
 }
 
 .home h3 {
@@ -439,9 +438,10 @@ h1, h2, h3, h4,
     display: inline-block;
     padding: 0px 10px;
     margin-right: 5px;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 24px;
-    text-transform: capitalize;
+    text-transform: uppercase;
+    letter-spacing: 2.2px;
 }
 
 .home .social {
